added user and events models

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
 <p>
   UsersController#show
+  <ul>
+    <li> add stats: events created</li>
+    <li> add recent events</li>
+    <li> test if it grabs current user info</li>
+  </ul>
 </p>
