--- a/app/views/static_pages/main.html.erb
+++ b/app/views/static_pages/main.html.erb
@@ -1,2 +1,8 @@
 <h1>StaticPages#main</h1>
 <p>Find me in app/views/static_pages/main.html.erb</p>
+
+<ul>
+  <li>add banner</li>
+  <li>add login button</li>
+  <li>add sign up button</li>
+</ul>
