--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Events</h1>
+<div class="container-fluid">
+  <div class="row header">
+    <div class="col-md-8">
+    <h1 class="main-title">Events Happening Right Now:</h1>
+    </div>
+    <div class="col-md-4">
+      <%= link_to 'New Event', new_event_path %>
+    </div>
+  </div>
+</div>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Location</th>
@@ -14,12 +23,21 @@
   </thead>
 
   <tbody>
+  <!-- Hard coded data -->
+  <tr>
+    <td>Hey</td>
+    <td>Hey</td>
+    <td>Hey</td>
+    <td>Hey</td>
+    <td>Hey</td>
+  </tr>
     <% @events.each do |event| %>
       <tr>
         <td><%= event.location %></td>
         <td><%= event.type %></td>
         <td><%= event.start %></td>
         <td><%= event.end %></td>
+        <!-- Do We need these links? -->
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -28,6 +46,10 @@
   </tbody>
 </table>
 
+
+
+
+
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+
