--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,5 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  // @import "../../../vendor/assets/stylesheets/**/*";
-
+@import "events";
+@import "static_pages";
