--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body{
+
+	background: url(../images/bg.png);
+
+}
+.container{
+
+	margin: 0 auto;
+	text-align: center;
+	padding-top:90px;
+
+
+	.btn{
+		margin-bottom: 10px;
+	}
+
+	.login-form{ 
+		max-width: 70%;
+		margin: 0 auto;
+	}
+}
+
