--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,9 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body{
+body {  
 
-	background: url(../images/bg.png);
+	background: url('http://images.freeimages.com/images/previews/84b/baseball-in-the-grass-1557579.jpg');
+	background-size: 100%;
 
 }
 .container{
