commiting to master cuz i suck

--- a/app/views/static_pages/main.html.erb
+++ b/app/views/static_pages/main.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 	<header>
-		<h1>APP NAME!</h1>
-		<h3>some cheesy app slogan</h3>
-		<p>Some info about our appsome info about our appome info about our </p>
+		<h1>Klutch PickUp</h1>
+		<h3>Don't look for pick up games, my friend. Let the pick up games find you.</h3>
+		<p>Join Klutch PickUp to get real time notifications on pick up games happening near you.</p>
 	</header>
 
 	<section>
