--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col-md-8">
     <h1 class="main-title">Events Happening Right Now:</h1>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 event-details">
       <div class="btn-group">
         <%= button_to('New Event', new_event_path, method: :get, :class => 'btn btn-large btn-primary sexy-button')  %>
       </div>
