--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Events</h1>
-
+<!--embed map-->
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+<!--end map-->
 <table>
   <thead>
     <tr>
@@ -31,3 +35,18 @@
 <br>
 
 <%= link_to 'New Event', new_event_path %>
+
+<!--JS-->
+<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+
+<script type="text/javascript">
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  markers = handler.addMarkers(<%=raw @hash.to_json %>);
+  handler.bounds.extendWith(markers);
+  // TO DO: Center map on Waterloo; 
+  // handler.fitMapToBounds();
+  });
+</script>
+<!--JS ENDS-->
