--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,3 @@
-<!--embed map-->
-<div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
-</div>
 <!--end map-->
 <p id="notice"><%= notice %></p>
 
@@ -17,29 +13,29 @@
     </div>
   </div>
 
+
+  
   <div class="row events-table col-md-6 col-md-offset-3">
 
-    <% @events.each do |event| %>
-    <div class="panel panel-default">
+    <!--embed map-->
+    <div style='width: 100%;'>
+      <div id="map" class="events-map" style='width: 100%; height: 200px;'></div>
+    </div>
+
+    <% @events.reverse_each do |event| %>
+    <div class="panel panel-default" onclick="panToMap(<%= event.latitude %>, <%= event.longitude %>)">
       <div class="panel-heading"><%= event.name %></div>
       <div class="panel-body">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <b>Location:</b> <%= event.location %>
             <br>
             <b>Game:</b> <%= event.type %>
-            <br>
+          </div>
+          <div class="col-md-6">
             <b>Start time:</b> <%= event.start %>
             <br>
             <b>End time:</b> <%= event.end %>
-          </div>
-          <div class="col-md-6 col-md-offset-2">
-            <div style="width:100%;max-width:100%;overflow:hidden;height:auto;color:red;">
-              <div id="embed-map-canvas" style="height:100%; width:100%;max-width:100%;">
-                <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=33.129861,+-111.239662&aq=&sll=33.605415,-112.125051&sspn=0.984773,2.099762&ie=UTF8&t=h&z=14&ll=33.129861,-111.239662&output=embed"></iframe>
-              </div>
-              <style>#embed-map-canvas .text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style>
-            </div>
           </div>
         </div>
       </div>
@@ -50,13 +46,34 @@
 <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 
-<script type="text/javascript">
-  handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers(<%=raw @hash.to_json %>);
-  handler.bounds.extendWith(markers);
-  // TO DO: Center map on Waterloo;
-  // handler.fitMapToBounds();
-  });
+<script>
+  var map;
+  function initialize() {
+    var mapCanvas = document.getElementById('map');
+    var mapOptions = {
+      center: new google.maps.LatLng(43.472042, -80.526116),
+      zoom: 13,
+    }
+
+    map = new google.maps.Map(mapCanvas, mapOptions);
+    var coordinates = <%=raw @hash.to_json %>;
+    console.log(coordinates);
+
+    for(var i = 0; i < coordinates.length; i++) {
+      var marker = new google.maps.Marker({
+        position: new google.maps.LatLng(coordinates[i].lat, coordinates[i].lng),
+        map: map,
+        title: coordinates[i].infowindow
+      });
+    }
+  }
+
+  var panToMap = function(latitude, longitude) {
+    var latLng = new google.maps.LatLng(latitude, longitude);
+    map.panTo(latLng);
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
 </script>
+
+
 <!--JS ENDS-->
