--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,32 +15,37 @@
 
 
   
-  <div class="row events-table col-md-6 col-md-offset-3">
+  <div class="row events-table">
+    <div class="col-md-6">
 
-    <!--embed map-->
-    <div style='width: 100%;'>
-      <div id="map" class="events-map" style='width: 100%; height: 200px;'></div>
+      <!--embed map-->
+      <div style='width: 100%;'>
+        <div id="map" class="events-map" style='width: 100%; height: 80vh;'></div>
+      </div>
+
     </div>
+    <div class="col-md-6 events-list well">
 
-    <% @events.reverse_each do |event| %>
-    <div class="panel panel-default" onclick="panToMap(<%= event.latitude %>, <%= event.longitude %>)">
-      <div class="panel-heading"><%= event.name %></div>
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-md-6">
-            <b>Location:</b> <%= event.location %>
-            <br>
-            <b>Game:</b> <%= event.type %>
-          </div>
-          <div class="col-md-6">
-            <b>Start time:</b> <%= event.start %>
-            <br>
-            <b>End time:</b> <%= event.end %>
+      <% @events.reverse_each do |event| %>
+      <div class="panel panel-default" onclick="panToMap(<%= event.latitude %>, <%= event.longitude %>)">
+        <div class="panel-heading"><%= event.name %></div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-md-6">
+              <b>Location:</b> <%= event.location %>
+              <br>
+              <b>Sport:</b> <%= event.type %>
+            </div>
+            <div class="col-md-6">
+              <b>Start time:</b> <%= event.start %>
+              <br>
+              <b>End time:</b> <%= event.end %>
+            </div>
           </div>
         </div>
       </div>
+      <% end %>
     </div>
-    <% end %>
 
 <!--JS-->
 <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
