--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -4,9 +4,9 @@
     <h1>New Event</h1>
 
     <%= simple_form_for @event do |f| %>
-      <%= f.input :name, :as => :string, wrapper_html: { id: 'event-name' } %>
+      <%= f.input :name, :as => :string %>
       <%= f.input :location, :as => :string, wrapper_html: { class: 'event-location' } %>
-      <%= f.input :type, :as => :string, wrapper_html: { id: 'event-type' } %>
+      <%= f.input :type, label: 'Sport', :as => :string, wrapper_html: { id: 'event-type' } %>
       <%= f.input :start, as: :time %>
       <%= f.input :end, as: :time %>
       <%= f.button :submit, html: { class: 'sexy-button' } %>
