--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,17 @@
 <!--end map-->
 <p id="notice"><%= notice %></p>
 
+<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+
 <div class="container-fluid events-page">
   <div class="row header">
     <div class="col-md-8">
@@ -35,6 +46,10 @@
               <b>Location:</b> <%= event.location %>
               <br>
               <b>Sport:</b> <%= event.type %>
+              <br>
+              <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank">
+                <img class="fb-share" src="http://shopify.barrelny.com/wp-content/uploads/2014/06/facebook-share-button.png">
+              </a>
             </div>
             <div class="col-md-6">
               <b>Start time:</b> <%= event.start %>
