--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -41,6 +41,10 @@ $break-small: 992px;
 	margin-bottom: 20px;
 }
 
+.center-align {
+	text-align: center;
+}
+
 .events-list {
 	height: 80vh;
 	overflow: scroll;
