add logo globally

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
   <!-- <link href="vendor/Flat-UI-master/dist/css/flat-ui.css" rel="stylesheet"> -->
 </head>
 <body>
+<div class="navbar-header">
+	<a class="navbar-brand" rel="home" href="/">
+		<img src="http://i61.tinypic.com/15p4lmc.png" border="0" alt="Image and video hosting by TinyPic">
+	</a>	
+</div>
 
 <%= yield %>
 
