--- a/app/views/static_pages/main.html.erb
+++ b/app/views/static_pages/main.html.erb
@@ -7,9 +7,8 @@
 
 	<section>
 		<div class="login-form">
-			<%= link_to "Sign in", new_user_session_path, class: "btn btn-primary btn-large"%>
-			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-large"%>
-			<p><br /> <a class="login-link" href="#">Lost your password?</a></p>
+			<%= link_to "Sign in", new_user_session_path, class: "sign-in btn btn-primary btn-large"%>
+			<%= link_to "Sign up", new_user_registration_path, class: "sign-up btn btn-primary btn-large"%>
 		</div>
 	</section>
 </div>
