minor styling on home page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -24,16 +24,9 @@ body {
 		color:#000;
 	}
 
-	.sign-in{
-		min-width: 40%;
-		max-width: 60%;
-		margin: 0 auto;
-	}
-
-	.sign-up{
-		min-width: 40%;
-		max-width: 60%;
-		margin: 0 auto;
+	.main-page-buttton {
+		width: 20%;
+		margin: 0 10px 10px 10px;
 	}
 
 }
