Updated styling, added redirect to events creation page

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -8,6 +8,10 @@ $break-small: 992px;
 	color: #2c3e50 !important;
 }
 
+.header {
+	margin-top: 25px;
+}
+
 .events-page {
 	color: #2c3e50;
 	padding-right: 30px;
