--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,9 +8,14 @@ body {
 	background-size: cover;
 }
 
+.navbar-header {
+		position: fixed;
+}
 .navbar-header img{
 	max-width: 200px;
+
 }
+
 
 .container{
 
