--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -30,7 +30,7 @@
               <br>
               <b>Sport:</b> <%= event.type %>
               <br>
-              <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=klutchpickup.com" target="_blank">
                 <img class="fb-share" src="http://shopify.barrelny.com/wp-content/uploads/2014/06/facebook-share-button.png">
               </a>
             </div>
