--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HtnPickUp</title>
+  <title>Klutch Pickup</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,7 +11,7 @@
 <div class="navbar-header">
 	<a class="navbar-brand" rel="home" href="/">
 		<img src="http://i61.tinypic.com/15p4lmc.png" border="0" alt="Image and video hosting by TinyPic">
-	</a>	
+	</a>
 </div>
 
 <%= yield %>
